# PxeOS

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: quality.yml  release.yml  test.yml
ansible/: galaxy.yml
ansible/examples/: provision_hosts.yml
ansible/plugins/module_utils/: pxeos_api.py
ansible/plugins/modules/: pxeos_host.py  pxeos_profile.py
config/: pxeos.toml
contrib/: pxeos.firewalld.xml  pxeos.service
contrib/java/: README.md
contrib/java/examples/: webserver-cluster.yaml
contrib/java/pxeos-client/: pom.xml
contrib/java/pxeos-client/src/main/java/com/flossware/pxeos/client/: Descriptor.java  HealthStatus.java  HostRule.java  Profile.java  ProvisionResult.java  ProvisionStatus.java  PxeOSClient.java  PxeOSProvisioner.java
contrib/java/pxeos-client/src/test/java/com/flossware/pxeos/client/: PxeOSClientTest.java
contrib/virtos/: README.md  haproxy-pxeos.cfg  nginx-pxeos.conf  virtos-pxeos
docs/: COMPARISON.md  DEPLOYMENT.md  KNOWN_LIMITATIONS.md  PLUGIN_CHECKLIST.md  PLUGIN_GUIDE.md  PLUGIN_TEMPLATE.py  SECURITY.md  TESTING.md  WEB_UI.md
e2e-data/: pxeos.toml
e2e-data/data/profiles/: freebsd15.toml  netbsd101.toml  openbsd78.toml  rocky101-server.toml
examples/: hosts.toml
examples/minimal/: README.md  hosts.toml  pxeos.toml
examples/minimal/profiles/: fedora-server.toml
examples/profiles/: database.toml  webserver.toml
pxeos/: __init__.py  api.py  audit.py  auth.py  cache.py  cli.py  cloud_image.py  cloud_init.py  cluster.py  cobbler_import.py  config.py  console.py  db.py  dhcp.py  discovery.py  engine.py  errors.py  http_server.py  importer.py  iso_detect.py  logging_config.py  matcher.py  metrics.py  mnemonics.py  models.py  named_objects.py  power.py  rate_limit.py  registry.py  repo_mirror.py  secrets.py  state.py  tftp.py  tls.py  validation.py  webhooks.py
pxeos/client/: __init__.py  base.py  bhyve_backend.py  hyperv_backend.py  libvirt_backend.py  vmm_backend.py  workflow.py
pxeos/plugins/: arch.py  base.py  debian.py  dragonflybsd.py  fedora.py  freebsd.py  netbsd.py  openbsd.py  suse.py  tinycore.py  ubuntu.py  windows.py
pxeos/templates/: archinstall.json.j2  autoyast.xml.j2  cloud-init-metadata.j2  cloud-init-network.j2  cloud-init-userdata.j2  cloud-init.yaml.j2  dragonflybsd-installerconfig.j2  grub.cfg.j2  install.conf.j2  installerconfig.j2  ipxe.j2  kickstart.cfg.j2  netbsd-auto.j2  preseed.cfg.j2  pxelinux.cfg.j2  tinycore.cfg.j2  unattend.xml.j2
pxeos/web/: routes.py
pxeos/web/templates/: base.html  cloud_init.html  console.html  dashboard.html  distros.html  hosts.html  import.html  keys.html  mirrors.html  named.html  power.html  profiles.html  provisions.html  provisions_table.html
scripts/: benchmark_pxe.py  capture-screenshots.sh  capture_screenshots.py
tests/: conftest.py  test_ansible_modules.py  test_api.py  test_audit.py  test_auth.py  test_benchmark.py  test_boot_once.py  test_bsd_validation.py  test_cli.py  test_cloud_image.py  test_cloud_init.py  test_cluster.py  test_cobbler_import.py  test_console.py  test_db.py  test_dhcp.py  test_e2e_pxe_boot.py  test_engine.py  test_error_handling.py  test_errors.py  test_importer.py  test_installer_validation.py  test_ipxe_scripting.py  test_iso_detect.py  test_java_integration.py  test_live.py  test_logging_config.py  test_matcher.py  test_mnemonics.py  test_models.py  test_named_objects.py  test_observability.py  test_performance.py  test_power.py  test_pxe_integration.py  test_rate_limit.py  test_registry.py  test_repo_mirror.py  test_secrets.py  test_security.py  (+11 more)
tests/plugins/: test_arch.py  test_debian.py  test_dragonflybsd.py  test_fedora.py  test_freebsd.py  test_netbsd.py  test_openbsd.py  test_suse.py  test_ubuntu.py  test_windows.py
