[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pxeos"
version = "1.0"
description = "Cross-OS PXE boot provisioning system supporting Linux, BSD, and Windows"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "FlossWare", email = "scot.floess@gmail.com"}
]
maintainers = [
    {name = "FlossWare", email = "scot.floess@gmail.com"}
]
keywords = [
    "pxe", "provisioning", "kickstart", "preseed", "autoinstall",
    "bsdinstall", "autoyast", "network-boot", "ipxe", "tftp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: BSD :: NetBSD",
    "Operating System :: POSIX :: BSD :: OpenBSD",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
# Supported Python versions: 3.10, 3.11, 3.12, 3.13
requires-python = ">=3.10"
dependencies = [
    # Required: template engine for boot scripts and autoinstall configs
    "jinja2>=3.1.0,<4.0",
    # Required: async web framework for the REST API
    "fastapi>=0.100.0,<1.0",
    # Required: ASGI server
    "uvicorn>=0.22.0,<1.0",
    # Required: TOML parsing on Python <3.11 (stdlib tomllib from 3.11+)
    "tomli>=2.0.0,<3.0; python_version < '3.11'",
    # Required: data validation for API models
    "pydantic>=2.0.0,<3.0",
    # Required: multipart form handling for ISO upload
    "python-multipart>=0.0.6,<1.0",
]

[project.optional-dependencies]
# Optional: shell tab-completion support
completion = ["argcomplete>=3.0,<4.0"]
# Optional: TLS certificate auto-generation
tls = ["cryptography>=41.0,<51.0"]
# Development and testing tools
dev = [
    # Testing
    "pytest>=7.0.0,<9.0",
    "pytest-cov>=4.0.0,<6.0",
    "pytest-xdist>=3.0.0,<4.0",
    "pytest-timeout>=2.1.0,<3.0",
    "pytest-mock>=3.10.0,<4.0",
    "coverage[toml]>=7.0.0,<8.0",
    # Code quality
    "radon>=5.1.0,<7.0",
    "xenon>=0.9.0,<1.0",
    "ruff>=0.1.0,<1.0",
    "mypy>=1.0.0,<2.0",
    # Security auditing
    "bandit>=1.7.5,<2.0",
    "pip-audit>=2.6.0,<3.0",
    # Build tools
    "build>=0.10.0,<2.0",
    "wheel>=0.40.0,<1.0",
    "setuptools>=65.0.0,<75.0",
]

[project.scripts]
pxeos = "pxeos.cli:main"

[project.entry-points."pxeos.plugins"]
fedora = "pxeos.plugins.fedora:FedoraPlugin"
debian = "pxeos.plugins.debian:DebianPlugin"
ubuntu = "pxeos.plugins.ubuntu:UbuntuPlugin"
suse = "pxeos.plugins.suse:SUSEPlugin"
freebsd = "pxeos.plugins.freebsd:FreeBSDPlugin"
dragonflybsd = "pxeos.plugins.dragonflybsd:DragonFlyBSDPlugin"
openbsd = "pxeos.plugins.openbsd:OpenBSDPlugin"
netbsd = "pxeos.plugins.netbsd:NetBSDPlugin"
arch = "pxeos.plugins.arch:ArchPlugin"
windows = "pxeos.plugins.windows:WindowsPlugin"
tinycore = "pxeos.plugins.tinycore:TinyCorePlugin"

[project.urls]
Homepage = "https://github.com/FlossWare/PxeOS"
Repository = "https://github.com/FlossWare/PxeOS"
Documentation = "https://github.com/FlossWare/PxeOS/blob/main/README.md"
"Bug Tracker" = "https://github.com/FlossWare/PxeOS/issues"

[tool.setuptools]
packages = ["pxeos", "pxeos.plugins", "pxeos.client"]

[tool.setuptools.package-data]
pxeos = ["py.typed", "templates/*.j2", "web/templates/*.html", "web/static/**/*"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "PL",
    "RUF",
]
ignore = [
    "E501",
    "PLR0913",
    "PLR2004",
    "PLC0415",
    "E402",
    "RUF002",
    "B904",
    "SIM108",
    "PLR0912",
    "PLR0915",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",
    "S101",
]
"examples/**/*.py" = [
    "T201",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["pxeos"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "htmlcov",
    "build",
    "dist",
]
skips = [
    "B101",
]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "tests/*"]

[tool.coverage.run]
source = ["pxeos"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/examples/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "*/venv/*",
]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
fail_under = 75
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError:",
    "if typing.TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=pxeos",
    "--cov-report=xml",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-branch",
    "--cov-fail-under=75",
    "--maxfail=3",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
timeout = 300

[tool.pylint.main]
py-version = "3.10"
ignore-paths = [
    "tests",
    "examples",
    ".venv",
    "build",
    "dist",
]

[tool.pylint.messages_control]
disable = [
    "C0111",
    "C0103",
    "R0903",
    "R0913",
    "W0212",
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-branches = 15
max-locals = 20
max-returns = 8
max-statements = 60
